--- a/railway-app/src/app/booking-forms/booking-forms.component.html
+++ b/railway-app/src/app/booking-forms/booking-forms.component.html
@@ -1,22 +1,23 @@
 <div class="container">
+    <h2>Train Booking</h2>
     <div class="form-group">
-        <label>Full name</label>
+        <label class="label">Full name</label>
         <input class="form-control" type="text" name="name">
     </div><br>
     <div class="form-group">
-        <label>Email</label>
+        <label class="label">Email</label>
         <input class="form-control" type="text" name="Email">
     </div><br>
     <div class="form-group">
-        <label>Source</label>
+        <label class="label">Source</label>
         <input class="form-control" type="text" name="Source">
     </div><br>
     <div class="form-group">
-        <label>Destination</label>
+        <label class="label">Destination</label>
         <input class="form-control" type="text" name="Destination">
     </div><br>
     <div class="form-group">
-        <label>Date</label>
+        <label class="label">Date</label>
         <input class="form-control" type="text" name="Date">
     </div><br>
     <div class="form-group">
