--- a/railway-app/src/app/train/train.component.html
+++ b/railway-app/src/app/train/train.component.html
@@ -1,42 +1,3 @@
-<p>train works!</p>
-<div class="container">
-    <h2 class="page-header">Admin - Train Form</h2>
-    <div class="form-group">
-        <label>Train Name</label>
-        <input type="text" name=">TrainName" class="form-control">
-    </div><br>
-
-    <div class="form-group">
-        <label>Train Number</label>
-        <input type="text" name="TrainNumber" class="form-control">
-    </div><br>
-
-    <div class="form-group">
-        <label>Start Station</label>
-        <input type="text" name="StartStation" class="form-control">
-    </div><br>
-
-    <div class="form-group">
-        <label>Destination</label>
-        <input type="text" name="Destination" class="form-control">
-    </div><br>
-
-    <div class="form-group">
-        <label>Arrival Time</label>
-        <input type="text" name="ArrivalTime" class="form-control">
-    </div><br>
-
-    <div class="form-group">
-        <label>Departure Time</label>
-        <input type="text" name="DepartureTime" class="form-control">
-    </div><br>
-    <div class="form-group">
-        <label>Date</label>
-        <input type="text" name="Date" class="form-control">
-    </div><br>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</div>
-<hr>
 <div class="container">
     <h2 class="page-header">Train TimeTable</h2>
     <table border="2px" cellspacing="5px">
@@ -62,4 +23,42 @@
             </td>
         </tr>
     </table>
+</div>
+<hr>
+<div class="container">
+    <h2 class="page-header">Admin - Train Form</h2>
+    <div class="form-group">
+        <label class="label">Train Name</label>
+        <input type="text" name=">TrainName" class="form-control">
+    </div><br>
+
+    <div class="form-group">
+        <label class="label">Train Number</label>
+        <input type="text" name="TrainNumber" class="form-control">
+    </div><br>
+
+    <div class="form-group">
+        <label class="label">Start Station</label>
+        <input type="text" name="StartStation" class="form-control">
+    </div><br>
+
+    <div class="form-group">
+        <label class="label">Destination</label>
+        <input type="text" name="Destination" class="form-control">
+    </div><br>
+
+    <div class="form-group">
+        <label class="label">Arrival Time</label>
+        <input type="text" name="ArrivalTime" class="form-control">
+    </div><br>
+
+    <div class="form-group">
+        <label class="label">Departure Time</label>
+        <input type="text" name="DepartureTime" class="form-control">
+    </div><br>
+    <div class="form-group">
+        <label class="label">Date</label>
+        <input type="text" name="Date" class="form-control">
+    </div><br>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </div>
