--- a/railway-app/src/app/home-page/home-page.component.html
+++ b/railway-app/src/app/home-page/home-page.component.html
@@ -11,13 +11,12 @@
     </p>
 </main>
 <mat-tab-group>
-    <mat-tab label="Train Schedule"> 
-        <h3>Check train</h3>
-        <button><a routerLink="/trainData">Train Data</a></button>
+    <mat-tab label="Train Schedule"> <br>
+        <!--button><a routerLink="/trainData">Train Data</a></button>-->
+        <app-train></app-train>
     </mat-tab>
     <mat-tab label="PNR"><h3>Check PNR </h3></mat-tab>
     <mat-tab label="Booking">
-      Booking here
       <app-booking-forms></app-booking-forms>
     </mat-tab>
   </mat-tab-group>
