--- a/railway-app/src/app/home-page/home-page.component.html
+++ b/railway-app/src/app/home-page/home-page.component.html
@@ -17,6 +17,6 @@
     </mat-tab>
     <mat-tab label="PNR"><h3>Check PNR </h3></mat-tab>
     <mat-tab label="Booking">
-      <app-booking-forms></app-booking-forms>
+      <button mat-raised-button type="button"  class="btn btn-primary"><a routerLink="/booking">Click for Booking</a></button>
     </mat-tab>
   </mat-tab-group>
