--- a/railway-app/src/app/login/login.component.html
+++ b/railway-app/src/app/login/login.component.html
@@ -19,11 +19,9 @@
             </div>
             <p class="errorDetect">{{errorDetl}}</p>
             <br>
-            <button type="button" id="signin" class="btn btn-primary" (click)='validateSignIn()'>Sign In</button>
+            <button type="button" id="signin" class="btn btn-primary" (click)='validateSignIn()'>Sign In</button>            
+            <button type="button" id="signup" class="btn btn-primary"><a routerLink="/signup">Sign In</a></button>
 
         </form>
-
-        <p><a routerLink="/forgotpassword" routerLinkActive="active">Forgot Password?</a></p>
-
     </div>
 </div>
