--- a/railway-app/src/app/home-page/home-page.component.html
+++ b/railway-app/src/app/home-page/home-page.component.html
@@ -6,8 +6,8 @@
                 <mat-icon>account_circle</mat-icon>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="right: 0; left: auto;">
-                <button mat-button><a class="dropdown-item" routerLink="/user/profile" routerLinkActive="active"><i class="material-icons">settings</i> View Profile</a></button>
-                <button mat-button><a class="dropdown-item" (click)='logout()'><i class="material-icons">power_settings_new</i>  Sign Out</a></button>
+                <a class="dropdown-item" routerLink="/user/profile" routerLinkActive="active"><i class="material-icons">settings</i> View Profile</a>
+                <a class="dropdown-item" (click)='logout()'><i class="material-icons">power_settings_new</i>  Sign Out</a>
             </div>
         </div>
     </span>
@@ -100,7 +100,8 @@
             </form>
             <p>{{errorMessage}}</p>
             <div class="form-group">
-                <table border="3.5px">
+                <h2 class="main-header" style="text-align: center; padding-top:5%;"><i class="material-icons" style="font-weight: 700; font-size: 2.8rem; line-height: 1em">equalizer</i> Trains Found</h2>
+                <table border="3.5px" id="TrainArray">
                     <tr>
                         <th class = "col-md-3">Train Name</th>
                         <th class = "col-md-3">Train Number</th>
@@ -108,13 +109,15 @@
                         <th class = "col-md-3">To</th>
                         <th class = "col-md-3">Select</th>
                     </tr>
-                    <tr *ngFor="let TRAIN of TrainArray">
-                        <td class = "col-md-3">{{TRAIN.trainName.values}}</td>
-                        <td class = "col-md-3">{{TRAIN.trainNumber}}</td>
-                        <td class = "col-md-3">{{TRAIN.startStation}}</td>
-                        <td class = "col-md-3">{{TRAIN.destination}}</td>
-                        <td class = "col-md-3"><button mat-raised-button class="btn btn-primary" (click)="prefill(TRAIN)" color="primary" (click)="bookClick()">Book</button></td>
-                    </tr>
+                    <tbody>
+                        <tr *ngFor="let TRAIN of TrainArray">
+                            <td class = "col-md-3">{{TRAIN.trainName.values}}</td>
+                            <td class = "col-md-3">{{TRAIN.trainNumber}}</td>
+                            <td class = "col-md-3">{{TRAIN.startStation}}</td>
+                            <td class = "col-md-3">{{TRAIN.destination}}</td>
+                            <td class = "col-md-3"><button mat-raised-button class="btn btn-primary" (click)="prefill(TRAIN)" color="primary" (click)="bookClick()">Book</button></td>
+                        </tr>
+                    </tbody>
                 </table> 
             </div>
             <button mat-raised-button type="button"  class="btn btn-primary" *ngIf="clicked"><a routerLink="/booking">Click for Booking</a></button>
