--- a/railway-app/src/app/signup/signup.component.css
+++ b/railway-app/src/app/signup/signup.component.css
@@ -15,7 +15,7 @@ p {
     font-weight: 200;
     font-size: 1.3rem;
     text-align: center;
-    color: #82B1FF;
+    color: #82B1FF; 
 }
 
 nav {
@@ -29,15 +29,14 @@ a {
 }
 
 button:hover {
-    width: 18%;
+    width: 25%;
     background-color: #F50057;
     border-color: #F50057;
     transition: linear 1s;
 }
 
 button {
-    width: 18%;
-    height: 8vh;
+    width: 25%;
     background-color: #1A237E;
     border-color: #1A237E;
     transition: linear 1s;
@@ -141,4 +140,7 @@ label {
 
 .hidebutt {
     visibility: hidden;
+}
+form{
+    background-color: #d3d9df;
 }
