--- a/railway-app/src/app/app.component.html
+++ b/railway-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="navbar">
-  <header class="MainHeader">Railway IRCTC</header>
+  <header class="MainHeader"><img src="../../assets/irctc_logo.jpeg" class="d-inline-block align-top" alt="bluebox-logo">Railway IRCTC</header>
 </mat-toolbar>
 <!-- <app-login></app-login> -->
 <router-outlet></router-outlet>
