--- a/railway-app/src/app/signedin/signedin.component.html
+++ b/railway-app/src/app/signedin/signedin.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top justify-content-between">
-    <h2 class="mb-3"><a routerLink="/homePage">Welcome to Railway Reservation</a></h2>
+    <h2 class="mb-3"><a routerLink="/homePage"><img src="../../assets/irctc_logo.jpeg" class="d-inline-block align-top" alt="bluebox-logo">Welcome to Railway Reservation</a></h2>
     <span>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
