--- a/railway-app/src/app/admin/admin.component.css
+++ b/railway-app/src/app/admin/admin.component.css
@@ -27,3 +27,23 @@ h2 {
     border-radius: 10%;
     width: 25%;
 }
+h3 {
+    color: #275ea3;
+    font-family: 'Segoe UI', sans-serif;
+    font-weight: 300;
+    font-size: 2.0rem;
+}
+ul li {
+    font-family: 'Segoe UI', sans-serif;
+    font-weight: 200;
+    font-size: 1.3rem;
+    color: #3b3f3f;
+}
+#station{
+    width: 80%;
+}
+
+.page-header2{
+    text-align: left;
+    margin-left: 23.5%;
+}
