--- a/railway-app/src/app/verified/verified.component.html
+++ b/railway-app/src/app/verified/verified.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top justify-content-between">
     <a class="navbar-brand" href="#">
-        <img src="../../assets/irctc_logo.png" width="auto" height="10px" class="d-inline-block align-top" alt="bluebox-logo">
+        <img src="../../assets/irctc_logo.jpeg" width="auto" height="10px" class="d-inline-block align-top" alt="bluebox-logo">
         <font color="#003166"><strong>Railway Reservation System </strong></font> | e-Ticketing System.
     </a>
 
