--- a/railway-app/src/app/booking-forms/booking-forms.component.html
+++ b/railway-app/src/app/booking-forms/booking-forms.component.html
@@ -47,7 +47,7 @@
                     </select>
                     </div>
                     <div *ngIf="gender.errors && (gender.touched || gender.invalid)">
-                        <small class="text-danger" *ngIf="gender.touched && gender.errors.required">Email id is required</small> 
+                        <small class="text-danger" *ngIf="gender.touched && gender.errors.required">Gender is required</small> 
                     </div>
                     <div class="form-group">
                         <label class="label">Disablities</label>
